chat_backoffice/templates/deployment-byk-dmapper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: byk-dmapper
spec:
  selector:
    matchLabels:
      app: byk-dmapper
  template:
    metadata:
      labels:
        app: byk-dmapper
    spec:
      containers:
        - name: byk-dmapper
          image: ghcr.io/buerokratt/datamapper:prod-2.0.0
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: byk-dsl-services
          persistentVolumeClaim:
            claimName: byk-dsl-services
