chat_backoffice/templates/deployment-byk-notification-server.yml
# templates/notifications-node-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-node
  template:
    metadata:
      labels:
        app: notifications-node
    spec:
      containers:
        - name: notifications-node
          image: riaee/byk:notification-server-1.0.0 
          ports:
            - containerPort: 4040
          volumeMounts:
            - name: node-modules
              mountPath: /app/node_modules
            - name: notification-server
              mountPath: /app/notification-server
      volumes:
        - name: node-modules
          emptyDir: {}
        - name: notification-server
          emptyDir: {}
