chat_backoffice/templates/deployment-byk-ruuter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: byk-ruuter
spec:
  selector:
    matchLabels:
      app: byk-ruuter
  template:
    metadata:
      labels:
        app: byk-ruuter
    spec:
      containers:
        - name: byk-ruuter
          image: ghcr.io/buerokratt/ruuter:beta-2.0.0
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: dsl
              mountPath: /byk-ruuter-pub/DSL/
            - name: urls-env
              mountPath: /usr/local/tomcat/urls.env.json
              subPath: public.urls.docker.json
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: dsl
          emptyDir: {}
        - name: urls-env
          configMap:
            name: urls-env-config
